--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,9 @@ strategy:
       python.version: '3.6'
 
 steps:
+- task: CmdLine@2
+  inputs:
+    script: 'where chromedriver.exe'
 - task: UsePythonVersion@0
   inputs:
     versionSpec: '$(python.version)'
