--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 ###### Requirements without Version Specifiers ######`
 selenium
+
+###### Requirements with Version Specifiers ######`
+chromedriver-binary == 75.0.3770.140.0
